--- a/app.css
+++ b/app.css
@@ -3,30 +3,54 @@ body{
     align-items: center;
     justify-content: center;
     height: 100vh;
+    font-family: "Inter", sans-serif;
+    background-color: rgb(242, 215, 182);
 }
 
 .container{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 1rem;
+    width: 1635px;
+    box-sizing: border-box;
+   
 }
-
+.heading{
+    font-size: 2rem;
+}
 .boxes{
-    width: 800px;
-    height: 800px;
-    border: 2px solid black;
+    width: 100%;
+    height: 815px;
+    border: 1px solid black;
     display: grid;
-    grid-template-columns: repeat(4 , 1fr);
+    grid-template-columns: repeat(8 , 1fr);
     grid-template-rows: repeat(4 , 1fr);
+    box-sizing: border-box;
+    cursor: pointer;
+    gap: 3px;
+    
 }
 
 .box{
-    background-color: red;
+   
     height: 200px;
     width: 200px;
+    box-sizing: border-box;
+    font-size: 1.3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
 }
 button{
     display: inline-block;
     margin-top: 20px;
+    padding: 1rem 2rem;
+    font-size: 1.2rem;
+    font-weight: 500;
+    transition: background-color 0.5s ease;
+}
+button:hover{
+    background-color: gray;
+    
 }
